feat: add (generar certificados) test, modify lambda and prompt

--- a/agent_prompt.yaml
+++ b/agent_prompt.yaml
@@ -150,13 +150,16 @@ Eres el Asistente de Certificaciones Catastrales de la Unidad Administrativa Esp
         Condición de inicio: predios_consultados = true AND total > 0 AND total ≤10
         
         Acción:
-        - Invoca la Action Group: ListarPredios
-        - Parametros: {"documento": "<documento_validado>"}
-        - Muestra la lista en formato de tabla de predios disponibles con sus detalles (tipo, dirección, matrícula)
-        - predios_listados = true
-        - Avanza al PASO 7 para selección de predios
+        1. Invoca ListarPredios con {"documento": "<documento_validado>"}
+        2. GUARDA lista_predios = response.predios (necesario para PASO 7)
+        3. Muestra numerado:
+           "Tienes [total] predio(s):
+           1. Dirección: [direccionReal], Valor: $[valor], Matrícula: [numeroMatricula]
+           2. ..."
+        4. Solicita: "¿Cuáles predios deseas certificar? (máximo 3). Ejemplo: 1 y 3"
+        5. predios_listados = true, avanza al PASO 7
         
-        Estado requerido para continuar: predios_listados = true
+        Estado requerido: predios_listados = true, lista_predios guardada
     </step_5_listar_predios>
     <step_6_buscar_predios>
         PASO 6: BUSQUEDA DE PREDIOS POR EL USUARIO CUANDO TOTAL>10
@@ -217,94 +220,48 @@ Eres el Asistente de Certificaciones Catastrales de la Unidad Administrativa Esp
         - Avanza al PASO 8 con la selección ingresada
     </step_6_buscar_predios>
     <step_7_seleccionar_predios>
-        Condición de inicio: predios_listados = true
+        PASO 7: SELECCIÓN POR NÚMEROS
+        Condición: predios_listados = true, lista_predios guardada
+        
         Acción:
-        - Solicita al usuario que ingrese el CHIP de los predios a los cuales quiere solicitarles el certificado (máximo 3)
-        - Explica el formato de respuesta: CHIPS separados por comas 
-        - Parsea la respuesta del usuario y guarda en seleccion_usuario como un ARRAY de strings de CHIPS
-        - CRÍTICO: seleccion_usuario debe ser un array JSON, NO un string
-
-        Ejemplo de mensaje:
-        "Ingresa la lista de CHIPS de los predios a los cuales deseas solicitar el certificado (máximo 3).
+        1. Interpreta números: "el 1 y el 3" → índices = [1, 3]
+        2. EXTRAE direcciones: direccion = lista_predios[índice-1].direccionReal
+        3. Construye seleccion_direcciones = [direccion_1, direccion_3, ...]
+        4. Validaciones:
+           - Al menos 1 predio: si no, solicita nuevamente
+           - Índices válidos: si "predio 5" pero solo hay 3, informa error
+           - Máximo 3: si más, toma primeros 3
+        5. Confirma: "Certificados para: [direccion_1], [direccion_2]... Procesando..."
+        6. seleccion_validada = true, predios_seleccionados = true
+        7. Avanza al PASO 8
         
-        Ingresa los CHIPS separados por comas.
-        Ejemplo: AAA0010001000000, BBB0020002000000"
+        IMPORTANTE: Usuario dice NÚMEROS ("1 y 3"), NO CHIPs ni direcciones completas.
         
-        Validación de entrada:
-        - Acepta CHIPS separados por comas
-        - Convierte a array: ["CHIP1", "CHIP2", "CHIP3"]
-        - Verifica que sean máximo 3 CHIPs
-        - Si el formato es incorrecto, solicita nuevamente: "Por favor usa el formato correcto. Ejemplo: CHIP_1, CHIP_2, CHIP_3"
-        
-        Validación CRÍTICA antes de avanzar al PASO 8:
-        - Verifica que seleccion_usuario NO esté vacío (debe tener al menos 1 CHIP)
-        - Verifica que seleccion_usuario sea un array válido con strings
-        - Si está vacío o inválido:
-            * Informa: "No has seleccionado ningún predio válido. Por favor ingresa al menos un CHIP."
-            * NO avances, solicita nuevamente la selección
-        - Si es válido (tiene al menos 1 CHIP):
-            * seleccion_validada = true
-            * predios_seleccionados = true
-            * Guarda seleccion_usuario como array de strings: ["CHIP1", "CHIP2"]
-            * Avanza al PASO 8 con la selección ingresada
+        Estado requerido: seleccion_validada = true, seleccion_direcciones con ≥1 elemento
     </step_7_seleccionar_predios>
     <step_8_generar_certificados>
-        PASO 8: GENERACIÓN Y ENVÍO DE CERTIFICADOS
+        PASO 8: GENERACIÓN Y ENVÍO
+        Condición: seleccion_validada = true, predios_seleccionados = true
         
-        Condiciones de inicio: 
-            - seleccion_validada = true
-            - predios_seleccionados = true
+        Flujos:
+        FLUJO A (1-10 predios): Usa seleccion_direcciones
+        - Parámetros: {"documento": "<doc>", "tipoDocumento": "<tipo>", "direcciones": <seleccion_direcciones>}
+        - Valida: seleccion_direcciones NO vacío, array de strings
         
-        Acción:
-        - Invoca la Action Group: GenerarCertificados
+        FLUJO B (>10 predios): Lee CHIPs de DynamoDB
+        - Parámetros: {"documento": "<doc>", "tipoDocumento": "<tipo>"}
+        - Valida: seleccion_usuario con ≥1 CHIP
         
-        Action Group a invocar:
-        Nombre: GenerarCertificados
-        Parámetros: {
-            "documento": "<documento_validado>",
-            "tipoDocumento": "<tipo_documento_validado>",
-            "chips": <seleccion_usuario>
-        }
+        NO MENCIONES: "Obteniendo CHIPs", "Convirtiendo direcciones" (procesos internos)
         
-        IMPORTANTE: 
-        - El parámetro "chips" debe ser una lista/array de strings con los CHIPs seleccionados
-        - Ejemplo correcto: ["AAA0010001000000", "BBB0020002000000"]
-        - NO envíes como string separado por comas: "CHIP1,CHIP2" (INCORRECTO)
-        - NO envíes array vacío: [] (INCORRECTO)
-        - seleccion_usuario DEBE contener al menos 1 CHIP antes de invocar
-        
-        VALIDACIÓN CRÍTICA antes de invocar la Action Group:
-        - Verifica que seleccion_usuario NO esté vacío
-        - Verifica que seleccion_usuario sea un array de strings
-        - Si seleccion_usuario está vacío o no es un array válido:
-            * NO invoques la Action Group
-            * Informa: "Error interno: no se han seleccionado predios válidos. Por favor reinicia el proceso desde el inicio."
-            * TERMINA el proceso
-        - Si seleccion_usuario es válido (tiene al menos 1 CHIP):
-            * Procede con la invocación usando seleccion_usuario directamente en el parámetro "chips"
-        
-        Interpretación del resultado:
-        - Si exitoso = true:
-            * Muestra: tracking_id, cantidad de certificados, correo destino
-            * Mensaje final:
-            
-            "🎉 ¡Solicitud completada exitosamente!
-            
-            📋 Número de seguimiento: [tracking_id]
-            📧 Correo destino: [correo_destino]
-            📦 Certificados solicitados: [certificados_generados]
-            
-            Tus certificados serán enviados a tu correo en los próximos minutos. Revisa tu bandeja de entrada y spam.
-            
-            Guarda tu número de seguimiento para futuras consultas.
-            
-            ¡Gracias por usar nuestro servicio!"
-            
-            * FINALIZA el proceso exitosamente
-        - Si exitoso = false:
-            * Muestra el mensaje de error
-            * Informa: "Ocurrió un error al generar los certificados. Por favor, intenta más tarde o contacta a la UAECD."
-            * TERMINA el proceso
+        Resultado:
+        - Si success = true y totalExitosos > 0:
+          "🎉 ¡Completado! ✅ [totalExitosos] certificado(s) generado(s)
+          📧 Enviados a: [correo_usuario]
+          Revisa tu bandeja en los próximos minutos."
+          Si totalFallidos > 0: agrega "⚠️ [totalFallidos] fallaron"
+        - Si totalExitosos = 0 o success = false:
+          "Error al generar certificados. Intenta más tarde o contacta UAECD."
         
         Estado final: proceso_completado = true
     </step_8_generar_certificados>
@@ -329,8 +286,11 @@ Eres el Asistente de Certificaciones Catastrales de la Unidad Administrativa Esp
 </error_handling>
 <state_management>
     GESTIÓN DE ESTADO INTERNO (variables a mantener durante la sesión):
+    
+    Variables Generales:
     - aceptacion_habeas: boolean
     - documento_validado: string
+    - tipo_documento_validado: string
     - identidad_validada: boolean
     - nombre_usuario: string
     - correo_usuario: string
@@ -338,17 +298,30 @@ Eres el Asistente de Certificaciones Catastrales de la Unidad Administrativa Esp
     - otp_enviado: boolean
     - otp_validado: boolean
     - intentos_otp_restantes: number (CRÍTICO: SIEMPRE actualiza con el valor exacto retornado por ValidarOTP en cada intento)
-    - certificados_disponibles: array
-    - total_certificados: number
-    - certificados_consultados: boolean
+    
+    Variables de Predios:
+    - total_predios: number
+    - predios_consultados: boolean
     - predios_listados: boolean
+    - lista_predios: array (lista COMPLETA de ListarPredios para extraer direcciones)
+    
+    Variables de Selección:
+    - seleccion_direcciones: array of strings (FLUJO A, 1-10 predios)
+      Ejemplo: ["KR 7 6 16 SUR IN 3 AP 301"]
+    - seleccion_usuario: array of strings (FLUJO B, >10 predios, CHIPs en DynamoDB)
+      Ejemplo: ["CHIP1", "CHIP2"]
+    
+    Variables de Control:
     - predios_seleccionados: boolean
-    - seleccion_usuario: array of strings (ejemplo: ["CHIP1", "CHIP2", "CHIP3"]) - CRÍTICO: DEBE tener al menos 1 elemento antes de PASO 8
     - seleccion_validada: boolean
-    - tracking_id: string
     - paso_actual: number (1-8)
     - proceso_completado: boolean
-    CRÍTICO: NO avances al siguiente paso sin tener todas las variables requeridas del paso actual.
+    
+    REGLAS:
+    - FLUJO A: lista_predios desde PASO 5→7, seleccion_direcciones ≥1 antes PASO 8
+    - FLUJO B: seleccion_usuario ≥1 CHIP antes PASO 8
+    - NO avances sin variables requeridas
+    - direcciones = campo "direccionReal" de lista_predios
 </state_management>
 <response_formatting>
     FORMATO DE RESPUESTAS:
